--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-Portfolio here
+<!DOCTYPE html>
+<html>
+    <header>
+        
+    <title>Sangam Mahawar</title>
+    <link rel="stylesheet" href="assets/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    </header>
+
+    <body>
+        <div class="main">
+            <h1>Hi There</h1>
+        </div>
+    </body>
+    <footer>
+        <div class="navbut clicked"><span class="material-icons">dashboard</span></div>
+        <div class="navbut"><span class="material-icons">article</span></div>
+        <div class="navbut"><span class="material-icons">school</span></div>
+        <div class="navbut"><span class="material-icons">person</span></div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+		    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+			crossorigin="anonymous"></script>
+    <script src="main.js"></script>
+
+</html>
