Navbar and tabs navigation added

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
     </header>
 
     <body>
-        <div class="main">
-            <h1>Hi There</h1>
+        <div class="content">
+            <div class="content-tab dashboard show">dashboard</div>
+            <div class="content-tab work">work</div>
+            <div class="content-tab education">education</div>
+            <div class="content-tab contact">contact</div>
         </div>
     </body>
     <footer>
-        <div class="navbut clicked"><span class="material-icons">dashboard</span></div>
-        <div class="navbut"><span class="material-icons">article</span></div>
-        <div class="navbut"><span class="material-icons">school</span></div>
-        <div class="navbut"><span class="material-icons">person</span></div>
+        <div class="navbut clicked" value="dashboard"><span class="material-icons">dashboard</span></div>
+        <div class="navbut" value="work"><span class="material-icons">work</span></div>
+        <div class="navbut" value="education"><span class="material-icons">school</span></div>
+        <div class="navbut" value="contact"><span class="material-icons">person</span></div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
 		    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
